@@ -1,3 +1,8 @@
+2010-03-07  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php:
+	- (scorerender_return_fragment_ok) Simplify function arguments.
+
 2010-03-06  Abel Cheung  <abelcheung@gmail.com>
 
 	* scorerender-class.php:
